spacing issue

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -25,6 +25,7 @@ figure {
 
 .funny-message {
 		padding-top: 20px;
+		min-height: 300px;
 		line-height: 97%;
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 700;
